# ChinaTravel_my

./: .gitignore  AGENT_ENV_PROGRESS.md  README.md  eval_exp.py  eval_tpc.py  eval_tpc_partial.py  eval_with_oracle.py  partial_tpc_scores.json  pyproject.toml  run_exp.py  run_tpc.py  run_tpc2026.py  test.md
agent_env/: README.md  SKILL.md  __init__.py  adapter.py  cli.py  config.toml.example  http_server.py  mcp_stdio.py
agent_env/scripts/: solve_one_with_codex.py  solve_script_with_harness.py  solve_split_with_codex.py
chinatravel/: .gitignore
chinatravel/agent/: base.py  load_model.py  registry.py
chinatravel/agent/UrbanTrip/: tpc_agent.py  tpc_llm.py  utils.py
chinatravel/agent/nesy_agent/: ast_checker_en.py  llm_driven_rec.py  nesy_agent.py  nl2sl_hybrid_en.py  utils.py
chinatravel/agent/nesy_agent/plan_for_check_en/: day1.json  day2.json  day3.json  day4.json  day5.json  day6.json
chinatravel/agent/nesy_agent/prompts/: prompts_en.py
chinatravel/agent/pure_neuro_agent/: __init__.py
chinatravel/agent/pure_neuro_agent/prompts/: __init__.py  examples_en.py  plan_en.json  (+3 more)
chinatravel/data/: load_datasets.py
chinatravel/environment/: language.py  world_env.py
chinatravel/evaluation/: commonsense_constraint.py  hard_constraint.py  preference.py
chinatravel/evaluation/default_splits/: TPC_IJCAI_2026_phase1.txt
chinatravel/symbol_verification/: commonsense_constraint.py  concept_func.py  hard_constraint.py  preference.py
scripts/: build_translation_assets.py
tests/: test_agent_registry.py  test_eval_tpc_partial.py  test_tpc2026_integration.py
(+6 files in other folders)
