[project]
name = "chinatravel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "datasets==3.3.2",
    "flashinfer-python==0.2.5",
    "func-timeout==4.3.5",
    "fuzzywuzzy==0.18.0",
    "geopy==2.4.1",
    "httpx==0.27.2",
    "json-repair==0.30.0",
    "jsonschema==4.23.0",
    "matplotlib==3.9.4",
    "modelscope==1.20.0",
    "numpy==1.26.4",
    "openai==1.53.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "tiktoken==0.9.0",
    "torch==2.6.0",
    "tqdm==4.66.6",
    "transformers==4.51.3",
    "vllm==0.8.5",
    "z3-solver==4.14.1.0",
]
